--- a/src/QueryService/appsettings.Development.json
+++ b/src/QueryService/appsettings.Development.json
@@ -29,16 +29,14 @@
     "LoggRootPath": "C:\\MicroLog"
   },
   "eventStoresOptions": {
-    //"connectionString": "mongodb://127.0.0.1:27017",
-    "connectionString": "mongodb+srv://redlime:kHcMxD8H4jtTHwqd@dev.bekgmgw.mongodb.net/?retryWrites=true&w=majority",
+    "connectionString": "mongodb://localhost:27017",
     "dbEngine": "mongo",
     "EventStoreType": "mongo",
     "DatabaseName": "EventStore",
     "collectionName": "EmployeeManagementEvents"
   },
   "noSqlDb": {
-    "connectionString": "mongodb+srv://redlime:kHcMxD8H4jtTHwqd@dev.bekgmgw.mongodb.net/?retryWrites=true&w=majority",
-    //"connectionString": "mongodb://127.0.0.1:27017",
+    "connectionString": "mongodb://localhost:27017",
     "dbEngine": "mongo",
     "CollectionName": "EmployeeManagement"
   }
